查询界面生成

--- a/readme/todo.txt
+++ b/readme/todo.txt
@@ -2,3 +2,7 @@
 1.分页或者list查询时,排序传递参数问题
 2.当生成的java文件有格式问题时,将会格式化不成功,目前造成的原因如下:
 a.表字段含义中含有/** **/类似的注释,自动生成出不合法的java的文件;
+3.jsp操作列增加是否显示标志;
+4.jsp页面中增加设置单一主键;
+5.jsp列表中时间显示为长整数;
+6.将已配置的列参数生成xml配置文件;
