--- a/readme/todo.txt
+++ b/readme/todo.txt
@@ -1,4 +1,7 @@
-2015-12-29
+2016-04-25
+1.config中增加适应数据库方式和持久层实现方式的实现;
+
+2015-12-29(已完成)
 1.分页或者list查询时,排序传递参数问题
 2.当生成的java文件有格式问题时,将会格式化不成功,目前造成的原因如下:
 a.表字段含义中含有/** **/类似的注释,自动生成出不合法的java的文件;
