--- a/readme/todo.txt
+++ b/readme/todo.txt
@@ -9,3 +9,6 @@ a.表字段含义中含有/** **/类似的注释,自动生成出不合法的java
 4.jsp页面中增加设置单一主键;
 5.jsp列表中时间显示为长整数;
 6.将已配置的列参数生成xml配置文件;
+
+备忘
+service层get和delete方法 的参数问题, 由于删除的主键参数是列表字段查询获得的, 列表参数是字段别名;
