--- a/readme/todo.txt
+++ b/readme/todo.txt
@@ -1,3 +1,9 @@
+备忘
+同时生成多个实体, 将会出现ctrl映射重复;
+
+2016-06-26
+service层get和delete方法 的参数问题, 由于删除的主键参数是列表字段查询获得的, 列表参数是字段别名;(已经解决)
+
 2016-04-25
 1.config中增加适应数据库方式和持久层实现方式的实现;
 
@@ -10,5 +16,4 @@ a.表字段含义中含有/** **/类似的注释,自动生成出不合法的java
 5.jsp列表中时间显示为长整数;
 6.将已配置的列参数生成xml配置文件;
 
-备忘
-service层get和delete方法 的参数问题, 由于删除的主键参数是列表字段查询获得的, 列表参数是字段别名;
+
