--- a/readme/todo.txt
+++ b/readme/todo.txt
@@ -1,5 +1,6 @@
 备忘
-同时生成多个实体, 将会出现ctrl映射重复;
+2016-08-31
+同时生成多个实体, 将会出现ctrl映射重复;(已完成)
 
 2016-06-26
 service层get和delete方法 的参数问题, 由于删除的主键参数是列表字段查询获得的, 列表参数是字段别名;(已经解决)
