--- a/readme/todo.txt
+++ b/readme/todo.txt
@@ -1,4 +1,6 @@
 备忘
+2017-08-05
+mybatis的xml文件中oracle分页,当前使用的是oracle8i.需要增加9i和10g;9i和10g分页方法是一样的;
 2017-01-05
 dao中新增一个find方法, 比如: select * from t where <if> a = ? </if> <if> and b = ? </if>
 
@@ -6,16 +8,16 @@ dao中新增一个find方法, 比如: select * from t where <if> a = ? </if> <if
 参数配置问题,现在不管是实体参数还是全局参数都放在TableViewModel中,这样是不好的.因为Entity个性化参数配置是跟随Entity的,全局统一;
 要将Entity的参数放在实体中;
 
-2016-08-31
+#2016-08-31
 同时生成多个实体, 将会出现ctrl映射重复;(已完成)
 
-2016-06-26
+#2016-06-26
 service层get和delete方法 的参数问题, 由于删除的主键参数是列表字段查询获得的, 列表参数是字段别名;(已经解决)
 
 2016-04-25
 1.config中增加适应数据库方式和持久层实现方式的实现;
 
-2015-12-29(已完成)
+#2015-12-29(已完成)
 1.分页或者list查询时,排序传递参数问题
 2.当生成的java文件有格式问题时,将会格式化不成功,目前造成的原因如下:
 a.表字段含义中含有/** **/类似的注释,自动生成出不合法的java的文件;
